2017-08-08  Franz Holzinger  <franz@ttproducts.de>
    * Make the path to the CSS file configurable. EXT:fh_debug means that the path to the CSS folder of this extension is used.

2017-07-12  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to Coding Guidelines

2017-07-04  Franz Holzinger  <franz@ttproducts.de>
    * new feature: Use a XCLASS for the TYPO3 7.x class ExtDirectRouter which overwrites the global ERROR object. Use the fh_debug error object instead.

2017-04-10  Franz Holzinger  <franz@ttproducts.de>
    * works with TYPO3 8.x
    * add a composer.json file

2017-01-23  Franz Holzinger  <franz@ttproducts.de>
	* new feature:  Add dynamic information to the text label shown in the Extension Manager. The client's current IP address is shown there and can be copy-pasted into the form entry field.

2017-01-17  Franz Holzinger  <franz@ttproducts.de>
	* new feature: sys_log shall be debuggable even if no debugBegin has been executed before
	* new feature: PROXY = 1 if the HTTP_X_FORWARDED_FOR variable shall determine the client ip address. This must be 0 in the Deutsche Bahn ICE.
	* new feature: make the title html tag configurable in order to name the debug files
	* bug fix: the output of an exception must not be in HTML format

2016-08-04  Franz Holzinger  <franz@ttproducts.de>
	* new feature: #77277 Give detailed debug info and more frontend output with "Oops, an error occurred!"
	* bug fix: devLog did not work

2016-06-02  Franz Holzinger  <franz@ttproducts.de>
	* bug fix: debug array with empty keys
	* new feature: add a header called Array to arrays
	* new feature: declare boolean, integer and float
	* support PHP 7.x and all TYPO3 7.x
	* add README.txt

2015-07-24  Franz Holzinger  <franz@ttproducts.de>
	* tested under TYPO3 7.4.0

2014-10-08  Franz Holzinger  <franz@ttproducts.de>
	* new feature: show private and protected object properties using the Reflection Classes